--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -1,5 +1,5 @@
 .home {
-  margin-top: 180px;
+  margin-top: 160px;
   padding: 70px;
   .top-section {
     display: flex;
@@ -28,6 +28,7 @@
   .top-section-bottom {
     display: flex;
     gap: 20px;
+    margin-bottom: 80px;
 
     .activity {
       display: flex;
@@ -36,7 +37,6 @@
 
       &:hover {
         opacity: 0.8;
-
         text-decoration: underline teal;
       }
 
@@ -63,15 +63,155 @@
       }
     }
   }
+
   .top-section-filters {
-    .filters {
-      position: relative;
+    display: flex;
+    gap: 20px;
+    margin-bottom: 150px;
+
+    a {
+      display: flex;
       cursor: pointer;
       height: 30px;
       background-color: teal;
       border-radius: 25px;
-      padding: 10px 20px;
-      margin: 10px 10px 10px 0;
+      padding: 15px 20px;
+      color: white;
+      text-decoration: none;
+      align-items: center;
+      text-align: center;
+      font-weight: 500;
+      width: fit-content;
+      font-size: 17px;
+      &:hover {
+        background-color: rgba(0, 128, 128, 0.811);
+      }
+      .filters {
+      }
+    }
+  }
+
+  .howItWorks {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    align-items: center;
+    margin-bottom: 150px;
+    .hiwTop {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      h1 {
+        margin-bottom: 10px;
+        font-size: 45px;
+      }
+      p {
+        text-align: center;
+        font-size: 19px;
+        font-weight: 600;
+        color: #474747;
+        width: 70%;
+      }
+    }
+    .hiwBottom {
+      display: flex;
+      .hiwSection {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 80px;
+        img {
+          display: flex;
+          height: 150px;
+          width: 150px;
+          margin-bottom: 10px;
+        }
+        h2 {
+          margin-bottom: 20px;
+          color: teal;
+          font-weight: 700;
+          cursor: pointer;
+          &:hover {
+            text-decoration: underline teal;
+          }
+        }
+        p {
+          text-align: center;
+          font-size: 19px;
+          font-weight: 600;
+          color: #474747;
+          width: 85%;
+        }
+      }
+    }
+    button {
+      display: flex;
+      justify-content: center;
+      padding: 20px;
+      margin: 40px;
+      width: 200px;
+      font-size: 20px;
+      font-weight: 700;
+      background-color: teal;
+      color: white;
+      border-radius: 10px;
+      border: none;
+      cursor: pointer;
+      cursor: pointer;
+      &:hover {
+        background-color: rgba(0, 128, 128, 0.811);
+      }
+    }
+  }
+
+  .download-section {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 200px;
+
+    .ds-side {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      img {
+        width: 300px;
+        height: 430px;
+      }
+    }
+    .ds-middle {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      height: 350px;
+      gap: 50px;
+      .icon {
+        img {
+          width: 80px;
+          height: 80px;
+        }
+      }
+      p {
+        font-size: 30px;
+        width: 300px;
+        font-weight: 700;
+      }
+      .dw-icons {
+        img {
+          margin: 0 20px;
+          width: 150px;
+          height: 50px;
+          object-fit: cover;
+          border-radius: 10px;
+          padding: 5px;
+          cursor: pointer;
+        }
+      }
     }
   }
 }
